--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/jodacame/happi-dev-sdk/issues"
   },
-  "homepage": "https://github.com/jodacame/happi-dev-sdk#readme"
+  "homepage": "https://happi.dev"
 }
